- fix scrollbar always showing in Chrome Windows - align checkboxes with labels in tracking page

--- a/src/_sass/_off-canvas.scss
+++ b/src/_sass/_off-canvas.scss
@@ -7,7 +7,7 @@ section {
 }
 
 #ticker {
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #settings {
@@ -45,7 +45,7 @@ section {
 .show-settings #settings,
 .show-single #single,
 .show-tracking #tracking #checkboxes{
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 /*
