--- a/src/_sass/sections/_tracking.scss
+++ b/src/_sass/sections/_tracking.scss
@@ -55,6 +55,7 @@
     
     > div {
         @extend %font-small;
+        @extend .flex;
         color: $font-light;
         margin-bottom: 12px;
         margin-left: 6px;
